@@ -1,6 +1,6 @@
-CREATE libvfw32.a
-ADDLIB libmsvfw32.a
-ADDLIB libavicap32.a
-ADDLIB libavifil32.a
+CREATE lib32/libvfw32.a
+ADDLIB lib32/libmsvfw32.a
+ADDLIB lib32/libavicap32.a
+ADDLIB lib32/libavifil32.a
 SAVE
 END
